# UConverter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: UnrealLodMesh.h  UnrealScriptFile.h  UnrealSkeletalMesh.h  common.h  idTechMd2.h  idTechMdl.h  q_md2.h  u_v3d.h
src/: Model.cpp  UnrealLodMesh.cpp  UnrealScriptFile.cpp  UnrealSkeletalMesh.cpp  idTechMd2.cpp  main.cpp  q_md2.cpp  u_v3d.cpp
